--- a/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
+++ b/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
@@ -48,7 +48,9 @@
         </div>
         <div>{{match.datetime | datetimeFormatBy}}</div>
       </div>
-      <app-match [data]="match"/>
+      <app-match
+        [data]="match"
+        [votes]="votes"/>
     </div>
   </ng-container>
 </div>
