--- a/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
@@ -11,6 +11,7 @@
   <app-matches-overview
     [leagues]="(dataService.leaguesOfNextMatches$ | async) || []"
     [matches]="nextMatches"
+    [votes]="(dataService.votesOfNextMatches$ | async) || {}"
   />
   <div
     *ngIf="!nextMatches.length"
