preselected filter leagues for selected user league

--- a/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
@@ -4,6 +4,7 @@
   <app-matches-overview
     [leagues]="(dataService.leaguesOfPrevMatches$ | async) || []"
     [matches]="prevMatches"
+    [selectedFilterLeagues]="(dataService.selectedUserLeague$ | async)?.leagues || undefined"
     [votes]="(dataService.votesOfPrevMatches$ | async) || {}"
   />
   <div
