--- a/tipovacka-app/src/styles.scss
+++ b/tipovacka-app/src/styles.scss
@@ -31,7 +31,15 @@
 }
 
 .btn-secondary {
-  @apply text-gray-900 bg-white border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200;
+  @apply text-gray-900 bg-white border border-gray-200 hover:bg-gray-100 hover:text-gray-700 focus:z-10 focus:ring-4 focus:ring-gray-200;
+}
+
+.btn-critical {
+  @apply text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300;
+}
+
+.btn-loading {
+  @apply h-10 w-32 animate-pulse bg-gray-200;
 }
 
 .badge {
@@ -70,12 +78,24 @@
   @apply mt-1 text-gray-600 text-xxs;
 }
 
+h1 {
+  @apply font-medium text-2xl;
+}
+
 h2 {
   @apply font-medium text-xl;
 }
 
 ngneat-dialog {
   .ngneat-dialog-content {
-    @apply p-4;
+    @apply overflow-y-auto px-4;
+
+    header {
+      @apply pt-4 pb-8 sticky top-0 bg-white z-50;
+    }
+
+    footer {
+      @apply pb-4 pt-8 flex justify-between sticky bottom-0 bg-white z-50;
+    }
   }
 }
