--- a/tipovacka-app/src/app/components/choose-user-league/choose-user-league.component.html
+++ b/tipovacka-app/src/app/components/choose-user-league/choose-user-league.component.html
@@ -1,11 +1,50 @@
 <header>
   <h1>{{ 'CHOOSE_USER_LEAGUE.TITLE' | transloco }}</h1>
 </header>
-<div class="flex flex-col w-full md:px-20 gap-2">
+<div class="flex flex-col gap-8">
   <div
     *ngFor="let userLeague of (dataService.userLeagues$ | async)"
-    class="flex gap-2"
+    class="flex flex-col gap-2"
   >
+    <div>{{userLeague.name}}</div>
+    <div class="grid grid-cols-2 md:grid-cols-5 gap-2">
+      <button
+        (click)="chooseUserLeague(userLeague)"
+        class="btn btn-primary flex justify-between"
+      >
+        SELECT
+        <span class="material-icons md-18">arrow_forward_ios</span>
+      </button>
+      <button
+        (click)="deleteUserLeague(userLeague.id)"
+        *ngIf="userLeague.hasAdminRights"
+        class="btn btn-critical flex justify-between"
+      >
+        DELETE
+        <span class="material-icons md-18">delete_forever</span>
+      </button>
+      <button
+        (click)="invite(userLeague.id)"
+        class="btn btn-secondary flex justify-between"
+      >
+        INVITE
+        <span class="material-icons md-18">ios_share</span>
+      </button>
+      <button
+        class="btn btn-secondary flex justify-between"
+      >
+        LEAVE
+        <span class="material-icons md-18">logout</span>
+      </button>
+      <button
+        *ngIf="userLeague.hasAdminRights"
+        class="btn btn-secondary flex justify-between"
+      >
+        USERS
+        <span class="material-icons md-18">group_remove</span>
+      </button>
+    </div>
+    <!--
     <button
       (click)="chooseUserLeague(userLeague)"
       class="btn btn-primary flex justify-between flex-grow"
@@ -20,6 +59,7 @@
     >
       <span class="material-icons">delete_forever</span>
     </button>
+    -->
   </div>
   <button
     (click)="chooseUserLeague()"
