for user league show all users in standings

--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -53,13 +53,13 @@
         <td>
         <span
           [ngClass]="{
-            'bg-red-100 text-red-800': user.correctVotes / user.totalVotes < 0.34,
+            'bg-red-100 text-red-800': !user.totalVotes || user.correctVotes / user.totalVotes < 0.34,
             'bg-orange-100 text-orange-800': user.correctVotes / user.totalVotes > 0.33 && user.correctVotes / user.totalVotes < 0.67,
             'bg-green-100 text-green-800': user.correctVotes / user.totalVotes > 0.66
           }"
           class="badge font-medium "
         >
-          {{(user.correctRatio * 100) | number: '1.1-1':'cs-CZ'}}%
+          {{(user.correctRatio * 100) | number: '2.1-1':'cs-CZ'}}%
         </span>
         </td>
       </tr>
