remove user from user league as admin

--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -36,7 +36,7 @@
         class="btn btn-secondary">
         <span class="material-icons md-18">sort</span>
         <span class="hidden md:block">
-            {{(sortBy === 'correctVotes' ? 'STANDINGS.FILTER.SUCCESSFUL_TIPS' : 'STANDINGS.FILTER.SUCCESSFUL_TIPS') | transloco}}
+            {{(sortBy === 'correctVotes' ? 'STANDINGS.FILTER.SUCCESSFUL_TIPS' : 'STANDINGS.FILTER.SUCCESSFUL_RATE') | transloco}}
           </span>
       </button>
     </div>
