--- a/tipovacka-app/src/app/components/choose-user-league/choose-user-league.component.html
+++ b/tipovacka-app/src/app/components/choose-user-league/choose-user-league.component.html
@@ -48,6 +48,7 @@
         <span class="material-icons md-18">logout</span>
       </button>
       <button
+        (click)="openUsersInUserLeagueModal(userLeague.id)"
         *ngIf="userLeague.hasAdminRights"
         class="btn btn-secondary flex justify-between"
       >
