--- a/tipovacka-app/src/app/components/create-user-league/create-user-league.component.html
+++ b/tipovacka-app/src/app/components/create-user-league/create-user-league.component.html
@@ -64,7 +64,7 @@
 <footer>
   <button
     (click)="ref.close()"
-    class="btn btn-secondary">{{ 'CREATE_USER_LEAGUE.CANCEL_BUTTON' | transloco }}</button>
+    class="btn btn-secondary">{{ 'CANCEL_BUTTON' | transloco }}</button>
   <button
     (click)="submit()"
     class="btn btn-primary">{{ 'CREATE_USER_LEAGUE.SUBMIT_BUTTON' | transloco }}</button>
