--- a/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
+++ b/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
@@ -50,7 +50,8 @@
       </div>
       <app-match
         [data]="match"
-        [votes]="votes"/>
+        [votes]="votes"
+      />
     </div>
   </ng-container>
 </div>
