--- a/tipovacka-app/src/app/components/choose-user-league/choose-user-league.component.html
+++ b/tipovacka-app/src/app/components/choose-user-league/choose-user-league.component.html
@@ -3,7 +3,7 @@
 </header>
 <div class="flex flex-col gap-8">
   <div
-    *ngFor="let userLeague of (dataService.userLeagues$ | async)"
+    *ngFor="let userLeague of ((dataService.userLeagues$ | async) || []) | sortBy: 'name'"
     class="flex flex-col gap-2"
   >
     <div>
@@ -12,7 +12,7 @@
           {{ userLeague.name }}
         </h2>
         <span
-          *ngIf="userLeague.hasAdminRights"
+          *ngIf="userLeague.isAdmin"
           class="material-icons"
         >admin_panel_settings</span>
       </div>
@@ -27,7 +27,7 @@
       </button>
       <button
         (click)="deleteUserLeague(userLeague.id)"
-        *ngIf="userLeague.hasAdminRights"
+        *ngIf="userLeague.isAdmin"
         class="btn btn-critical flex justify-between"
       >
         {{"CHOOSE_USER_LEAGUE.DELETE" | transloco}}
@@ -42,6 +42,7 @@
       </button>
       <button
         (click)="leave(userLeague.id)"
+        *ngIf="userLeague.isUser"
         class="btn btn-secondary flex justify-between"
       >
         {{"CHOOSE_USER_LEAGUE.LEAVE" | transloco}}
@@ -49,7 +50,7 @@
       </button>
       <button
         (click)="openUsersInUserLeagueModal(userLeague)"
-        *ngIf="userLeague.hasAdminRights"
+        *ngIf="userLeague.isAdmin"
         class="btn btn-secondary flex justify-between"
       >
         {{"CHOOSE_USER_LEAGUE.USERS" | transloco}}
